fixed input filed too high

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,6 +61,7 @@ button{
     font-family: 'Roboto', sans-serif;
     padding: 8px;
     max-width: 250px;
+    margin: 16px 0;
 
 }
 
